# projet-audioprothese

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: backup.yml  cd-deploy.yml  ci.yml  deploy.yml  infra.yml  security.yml
ansible/: README.md  ansible.cfg  inventory.ini.example
ansible/playbooks/: backup.yml  minio.yml  restore.yml
app/backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
app/backend/app/: __init__.py  config.py  crud.py  database.py  main.py  models.py  observability.py  schemas.py  seed.py
app/backend/app/routers/: health.py  patients.py  rendezvous.py
app/backend/tests/: conftest.py  test_health.py  test_patients.py
app/frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
app/frontend/src/: App.jsx  (+3 more)
docs/: architecture.md  backlog.md  contributions.md  demo-checklist.md  demo-runbook.md  finops-gestion-couts.md  installation.md  livrables.md  monitoring.md  planning-gantt.md  pra-pca.md  runbooks.md  securite-devsecops.md  test-e2e.md  validation-conformite.md
infra/terraform/: acr.tf  aks.tf  budget.tf  keyvault.tf  main.tf  network.tf  onprem.tf  outputs.tf  postgres.tf  providers.tf  terraform.tfvars.example  variables.tf
livrables/: GUIDE_DEMO.md  README.md  build_all.py  content_docs.py  gen_pdf.py  generate_docs.py  individuals_content.py  individuals_content2.py  lien_github.txt
monitoring/alertmanager/: alertmanager.yml
scripts/: deploy.sh  seed-db.sh  smoke-test.sh  teardown.sh
(+20 files in other folders)
