[project]
name = "audioprothese-backend"
version = "0.1.0"
description = "API de gestion d'un cabinet d'audioprothèse"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI utilise Depends() comme valeur par défaut
